--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<mainClass>io.github.ideiudicibus.regione.lazio.cpf.ordini.desktop.WebViewClient</mainClass>
 	</properties>
 
 	<dependencies>
@@ -34,11 +35,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		
 		<dependency>
-			<groupId>com.googlecode.json-simple</groupId>
-			<artifactId>json-simple</artifactId>
-			<version>1.1.1</version>
-		</dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20160810</version>
+</dependency>
 
 		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
 		<dependency>
@@ -61,112 +63,134 @@
 
 	</dependencies>
 
+	<profiles>
+		<profile>
+			<id>generateSourcesFromWSDL</id>
+			<build>
 
-	<build>
-		<plugins>
-<!-- use 'mvn clean generate-sources' expect results in src/main/java   -->
-			<plugin>
-				<groupId>org.apache.cxf</groupId>
-				<artifactId>cxf-codegen-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>generate-sources</id>
-						<phase>generate-sources</phase>
+				<plugins>
+					<!-- use 'mvn clean generate-sources' expect results in src/main/java -->
+					<plugin>
+						<groupId>org.apache.cxf</groupId>
+						<artifactId>cxf-codegen-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>generate-sources</id>
+								<phase>generate-sources</phase>
+								<configuration>
+									<sourceRoot>${basedir}/src/main/java</sourceRoot>
+									<defaultOptions>
+
+										<noAddressBinding>true</noAddressBinding>
+									</defaultOptions>
+									<wsdlOptions>
+										<wsdlOption>
+											<wsdl>https://www.laitspa.it/cpf/services/Security?wsdl</wsdl>
+										</wsdlOption>
+										<wsdlOption>
+											<wsdl>https://www.laitspa.it/cpf/services/RicezioneOrdini?wsdl</wsdl>
+										</wsdlOption>
+									</wsdlOptions>
+								</configuration>
+								<goals>
+									<goal>wsdl2java</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+
+				</plugins>
+			</build>
+
+		</profile>
+
+		<profile>
+			<id>alm</id>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-assembly-plugin</artifactId>
 						<configuration>
-							<sourceRoot>${basedir}/src/main/java</sourceRoot>
-							<defaultOptions>
-
-								<noAddressBinding>true</noAddressBinding>
-							</defaultOptions>
-							<wsdlOptions>
-								<wsdlOption>
-									<wsdl>https://www.laitspa.it/cpf/services/Security?wsdl</wsdl>
-								</wsdlOption>
-								<wsdlOption>
-									<wsdl>https://www.laitspa.it/cpf/services/RicezioneOrdini?wsdl</wsdl>
-								</wsdlOption>
-							</wsdlOptions>
+							<archive>
+								<manifest>
+									<mainClass>${mainClass}</mainClass>
+								</manifest>
+							</archive>
+							<descriptorRefs>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
+							</descriptorRefs>
 						</configuration>
-						<goals>
-							<goal>wsdl2java</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>MainHandler</mainClass>
-						</manifest>
-					</archive>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-					<encoding>UTF-8</encoding>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.7.2</version>
-				<configuration>
-					<perCoreThreadCount>false</perCoreThreadCount>
-					<threadCount>1</threadCount>
-				</configuration>
-			</plugin>
-
-
-			<!-- Make this jar executable -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>**/log4j.properties</exclude>
-					</excludes>
-					<archive>
-						<manifest>
-							<addClasspath>true</addClasspath>
-							<mainClass>io.github.ideiudicibus.regione.lazio.cpf.desktop.WebViewClient</mainClass>
-							<classpathPrefix>dependency-jars/</classpathPrefix>
-						</manifest>
-					</archive>
-				</configuration>
-			</plugin>
-
-			<!-- Copy project dependency -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.5.1</version>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.1</version>
 						<configuration>
-							<!-- exclude junit, we need runtime dependency only -->
-							<includeScope>runtime</includeScope>
-							<outputDirectory>${project.build.directory}/dependency-jars/</outputDirectory>
+							<source>1.8</source>
+							<target>1.8</target>
+							<encoding>UTF-8</encoding>
 						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.7.2</version>
+						<configuration>
+							<perCoreThreadCount>false</perCoreThreadCount>
+							<threadCount>1</threadCount>
+						</configuration>
+					</plugin>
 
 
-		</plugins>
-	</build>
+					<!-- Make this jar executable -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-jar-plugin</artifactId>
+						<configuration>
+							<excludes>
+								<exclude>**/log4j.properties</exclude>
+							</excludes>
+							<archive>
+								<manifest>
+									<addClasspath>true</addClasspath>
+									<mainClass>${mainClass}</mainClass>
+									<classpathPrefix>dependency-jars/</classpathPrefix>
+								</manifest>
+							</archive>
+						</configuration>
+					</plugin>
+
+					<!-- Copy project dependency -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-dependency-plugin</artifactId>
+						<version>2.5.1</version>
+						<executions>
+							<execution>
+								<id>copy-dependencies</id>
+								<phase>package</phase>
+								<goals>
+									<goal>copy-dependencies</goal>
+								</goals>
+								<configuration>
+									<!-- exclude junit, we need runtime dependency only -->
+									<includeScope>runtime</includeScope>
+									<outputDirectory>${project.build.directory}/dependency-jars/</outputDirectory>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+
+
+
+
+				</plugins>
+			</build>
+
+
+		</profile>
+
+	</profiles>
+
+
 </project>
